[package]
name = "miru"
version = "0.1.0"
authors = ["Pepeye <gaofolaju@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name using the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want.
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "app"

[dependencies]
actix-web = "4.0.0-beta.6"
actix-rt = "2.2.0"
config = "0.11.0"
dotenv = "0.15"
listenfd = "0.3"
chrono = "0.4"
ulid = "0.4.0"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1"
eyre = "0.6"
color-eyre = "0.5"
tokio = "1.5.0"
tracing = "0.1"
tracing-futures = "0.2"
tracing-log = { version = "0.1", features = ["env_logger"] }
tracing-subscriber = "0.2"

[dev-dependencies]
reqwest = "0.11.3"
