[package]
name = "miru"
version = "0.1.0"
authors = ["Pepeye <gaofolaju@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name using the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want.
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "miru"

[dependencies]
actix-web = "4.0.0-beta.7"
actix-rt = "2.2.0"

config = "0.11.0"
chrono = "0.4"
ulid = "0.4.1"
serde = { version = "1.0.125", features = ["derive"] }
eyre = "0.6.5"
color-eyre = "0.5.11"
tracing = { version = "0.1.26", features = ["log"] }
tracing-futures = "0.2.5"
tracing-log = { version = "0.1.2", features = ["env_logger"] }
tracing-subscriber = { version = "0.2.18", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.2.4"
tracing-actix-web = "0.4.0-beta.7"


[dev-dependencies]
once_cell = "1.7.2"
reqwest = "0.11.3"
serde_json = "1"
tokio = "1.5.0"
